[ADD] Stylings for the index page. [ADD] Character-select html page. [CHG] Stylings for the index page to correct spacing. [CHG] Punctuation for the index page.

--- a/index.css
+++ b/index.css
@@ -1,11 +1,15 @@
 #body-wrapper p {
-	text-align:right;
+	text-align: right;
+    padding-right: 5%;
+    padding-top: 20px;
 }
 
 #welcome-text h1 {
 	text-align:center;
+	padding-top: 16%;
 }
 
 #start-text p {
 	text-align:center;
+	padding-left: 5%; /* This centers the text */
 }
